# finance-batch

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
batch/: config_loader.py  current_price_samle.py  env_loader.py  finance_db.py  get_finance_data.py  get_tickers.py  get_yearly_data.py  select_tickers.py
temp/: config.yaml  config_loader.py  current_price_samle.py  get_yearly_data.py
