[tool.poetry]
name = "batch"
version = "0.1.0"
description = "에테르 배치"
authors = ["이재우 <jwleeitn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.112.2"
poetry = "^1.8.3"
uvicorn = "^0.30.6"
python = ">=3.11 <3.12"
requests = "^2.32.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
